--- a/app/src/main/res/layout/activity_mark_card.xml
+++ b/app/src/main/res/layout/activity_mark_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dataservicios.ttauditpalmeraauditor.view.MarkCardActivity">
+    tools:context="com.dataservicios.ttauditalicorpcp.view.MarkCardActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarProfile"
