--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dataservicios.ttauditpalmeraauditor.view.StoreAuditActivity">
+    tools:context="com.dataservicios.ttauditalicorpcp.view.StoreAuditActivity">
 
     <include layout="@layout/actionbar_toolbar"/>
     <!-- Objeto con Scroll -->
@@ -34,18 +34,13 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/padding_text">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingLeft="@dimen/activity_vertical_margin"
                         android:paddingRight="@dimen/activity_vertical_margin"
                         android:orientation="vertical"
-                        android:layout_gravity="center"
+
                         android:paddingTop="@dimen/activity_vertical_margin">
 
                         <TextView
@@ -71,49 +66,6 @@
                             android:paddingBottom="@dimen/activity_vertical_margin"
                             android:layout_gravity="left"
                             android:text="" />
-                        <!--<android.support.v7.widget.SwitchCompat-->
-                        <!--android:id="@+id/switch1"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-                        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:textOn="@string/sw_si"-->
-                        <!--android:textOff="@string/sw_no"-->
-                        <!--android:showText="true"-->
-                        <!--android:textColor="@color/colorWhite"-->
-                        <!--android:thumb="@drawable/custom_swich_selector"-->
-                        <!--android:track="@drawable/custom_swich_track"-->
-                        <!--/>-->
-
-                        <!--<android.support.v7.widget.SwitchCompat-->
-                        <!--android:id="@+id/switch1"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-                        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:text="Switch with status text"-->
-                        <!--android:textOn="@string/sw_si"-->
-                        <!--android:textOff="@string/sw_no"-->
-                        <!--android:showText="true"-->
-
-                        <!--/>-->
-
-                        <!--<Switch-->
-                        <!--android:id="@+id/switch2"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-                        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:text="Switch with status text"-->
-                        <!--android:textOn="@string/sw_si"-->
-                        <!--android:textOff="@string/sw_no"-->
-                        <!--android:showText="true"-->
-                        <!--style="@style/SwitchCompatStyle"-->
-                        <!--/>-->
-
                         <Switch
                             android:id="@+id/swYesNo"
                             android:layout_width="wrap_content"
@@ -156,41 +108,27 @@
                             android:layout_gravity="center"
                             style="?android:attr/borderlessButtonStyle"/>
 
-                    </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/lyComment"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="@dimen/activity_vertical_margin"
+                            android:paddingRight="@dimen/activity_vertical_margin"
+                            >
 
-
-
-                    <LinearLayout
-                        android:id="@+id/lyComment"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/activity_vertical_margin"
-                        android:paddingRight="@dimen/activity_vertical_margin"
-                        >
+                        </LinearLayout>
 
                     </LinearLayout>
-
-                </LinearLayout>
-
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/Widget.CardContent"
                 android:layout_margin="@dimen/padding_text"
                 >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        style="@style/Widget.CardContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
 
                         <Button
                             android:id="@+id/btSave"
@@ -198,10 +136,8 @@
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_save"
                             android:text="@string/save"
+                            android:layout_margin="@dimen/activity_horizontal_margin"
                             android:theme="@style/ButtonCloseAudit" />
-                    </LinearLayout>
-                </LinearLayout>
-
 
             </android.support.v7.widget.CardView>
 
