--- a/app/src/main/res/layout/activity_poll_product.xml
+++ b/app/src/main/res/layout/activity_poll_product.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dataservicios.ttauditbayermercaderismo.view.PollProductActivity">
+    tools:context="com.dataservicios.ttauditalicorpcp.view.PollProductActivity">
 
     <include layout="@layout/actionbar_toolbar"/>
     <!-- Objeto con Scroll -->
@@ -34,10 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/padding_text">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -95,49 +92,6 @@
                             android:paddingBottom="@dimen/activity_vertical_margin"
                             android:layout_gravity="left"
                             android:text="" />
-                        <!--<android.support.v7.widget.SwitchCompat-->
-                        <!--android:id="@+id/switch1"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-                        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:textOn="@string/sw_si"-->
-                        <!--android:textOff="@string/sw_no"-->
-                        <!--android:showText="true"-->
-                        <!--android:textColor="@color/colorWhite"-->
-                        <!--android:thumb="@drawable/custom_swich_selector"-->
-                        <!--android:track="@drawable/custom_swich_track"-->
-                        <!--/>-->
-
-                        <!--<android.support.v7.widget.SwitchCompat-->
-                        <!--android:id="@+id/switch1"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-                        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:text="Switch with status text"-->
-                        <!--android:textOn="@string/sw_si"-->
-                        <!--android:textOff="@string/sw_no"-->
-                        <!--android:showText="true"-->
-
-                        <!--/>-->
-
-                        <!--<Switch-->
-                        <!--android:id="@+id/switch2"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-                        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:text="Switch with status text"-->
-                        <!--android:textOn="@string/sw_si"-->
-                        <!--android:textOff="@string/sw_no"-->
-                        <!--android:showText="true"-->
-                        <!--style="@style/SwitchCompatStyle"-->
-                        <!--/>-->
-
                         <Switch
                             android:id="@+id/swYesNo"
                             android:layout_width="wrap_content"
@@ -180,22 +134,24 @@
                             android:layout_gravity="center"
                             style="?android:attr/borderlessButtonStyle"/>
 
+                        <LinearLayout
+                            android:id="@+id/lyComment"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="@dimen/activity_vertical_margin"
+                            android:paddingRight="@dimen/activity_vertical_margin"
+                            >
+
+                        </LinearLayout>
+
+
                     </LinearLayout>
 
 
 
-                    <LinearLayout
-                        android:id="@+id/lyComment"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/activity_vertical_margin"
-                        android:paddingRight="@dimen/activity_vertical_margin"
-                        >
 
-                    </LinearLayout>
 
-                </LinearLayout>
 
 
             </android.support.v7.widget.CardView>
@@ -203,18 +159,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/Widget.CardContent"
                 android:layout_margin="@dimen/padding_text"
                 >
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        style="@style/Widget.CardContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
 
                         <Button
                             android:id="@+id/btSave"
@@ -222,9 +170,9 @@
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_save"
                             android:text="@string/save"
+                            android:layout_margin="@dimen/activity_horizontal_margin"
                             android:theme="@style/ButtonCloseAudit" />
-                    </LinearLayout>
-                </LinearLayout>
+
 
 
             </android.support.v7.widget.CardView>
@@ -233,8 +181,6 @@
 
     </android.support.v4.widget.NestedScrollView>
     <!-- App Bar -->
-
-
 
 </android.support.design.widget.CoordinatorLayout>
 
