--- a/app/src/main/res/layout/activity_product_competity.xml
+++ b/app/src/main/res/layout/activity_product_competity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dataservicios.ttauditbayermercaderismo.view.ProductPriceActivity">
+    tools:context="com.dataservicios.ttauditalicorpcp.view.ProductCompetityActivity">
     <include layout="@layout/actionbar_toolbar"/>
     <LinearLayout
         android:orientation="vertical"
