--- a/app/src/main/res/layout/activity_store_audit.xml
+++ b/app/src/main/res/layout/activity_store_audit.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dataservicios.ttauditpalmeraauditor.view.StoreAuditActivity">
+    tools:context="com.dataservicios.ttauditalicorpcp.view.StoreAuditActivity">
 
     <include layout="@layout/actionbar_toolbar"/>
     <!-- Objeto con Scroll -->
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -35,148 +34,55 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/padding_text">
-
-
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <include layout="@layout/content_store" />
 
-                    <!--<LinearLayout-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:orientation="horizontal">-->
-
-                    <!--<ImageButton-->
-                    <!--android:id="@+id/imageButton"-->
-                    <!--style="?android:attr/borderlessButtonStyle"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:src="@drawable/ic_home" />-->
-
-
-                    <!--</LinearLayout>-->
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="240dp"
-                        android:orientation="horizontal">
-
-
-                        <fragment
+                    <fragment
                             android:id="@+id/map"
                             android:name="com.google.android.gms.maps.SupportMapFragment"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal">
+                            android:layout_height="240dp" />
 
                         <Button
                             android:id="@+id/btSaveGeo"
+                            android:layout_gravity="center"
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableStart="@drawable/ic_location_on"
                             android:text="@string/message_update_gps" />
-                    </LinearLayout>
                 </LinearLayout>
-
             </android.support.v7.widget.CardView>
-
             <android.support.v7.widget.CardView
                 android:id="@+id/card3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/padding_text">
-
                 <LinearLayout
+                    android:id="@+id/lyContentButtons"
+                    style="@style/Widget.CardContent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/activity_vertical_margin"
-                        android:paddingRight="@dimen/activity_vertical_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            >
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="@string/text_info_audits"
-                                android:textAllCaps="true"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                                android:textColor="@color/colorPrimaryDark" />
-                            <ImageButton
-                                android:id="@+id/imgAuditStore"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="0dp"
-                                android:padding="0dp"
-                                android:layout_alignParentRight="true"
-                                android:src="@drawable/ic_menu_sync" />
-                        </RelativeLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/lyContentButtons"
-                        style="@style/Widget.CardContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-
-                    </LinearLayout>
+                    android:layout_height="wrap_content">
                 </LinearLayout>
-
-
             </android.support.v7.widget.CardView>
-
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/Widget.CardContent"
                 android:layout_margin="@dimen/padding_text">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        style="@style/Widget.CardContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
                         <Button
                             android:id="@+id/btcloseRouteStore"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_action_exit"
                             android:text="@string/text_close_store"
+                            android:layout_margin="@dimen/activity_horizontal_margin"
                             android:theme="@style/ButtonCloseAudit" />
-                    </LinearLayout>
-                </LinearLayout>
-
-
             </android.support.v7.widget.CardView>
-
         </LinearLayout>
-
     </android.support.v4.widget.NestedScrollView>
-    <!-- App Bar -->
-
-
-
 </android.support.design.widget.CoordinatorLayout>
