--- a/app/src/main/res/layout/content_route.xml
+++ b/app/src/main/res/layout/content_route.xml
@@ -2,13 +2,14 @@
 <LinearLayout style="@style/Widget.CardContent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--&gt;-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -22,7 +23,7 @@
 
         </RelativeLayout>
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
     <TextView
@@ -48,6 +49,4 @@
             android:layout_height="wrap_content"
             android:text="455668" />
     </LinearLayout>
-
-
 </LinearLayout>
